--- a/css/animation-lab/style.css
+++ b/css/animation-lab/style.css
@@ -24,6 +24,11 @@
 
 
 
+
+
+
+
+
 /* FORTUNE TELLER */
 
 .fortune-container {
@@ -35,17 +40,23 @@
 }
 
 .text {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     position: absolute;
+    width: 200px;
+    height: 200px;
     z-index: -1000;
     font-size: 20px;
-    
+    font-weight: bold;
 }
 
 .fortune-teller-1 {
     background-color: red;
     height: 100px;
     width: 100px;
-    transition: transform 500ms ease-in-out;
+    transition: transform 1s ease-in-out;
     transform-origin: top left;
 }
 
@@ -53,7 +64,7 @@
     background-color: yellow;
     height: 100px;
     width: 100px;
-    transition: transform 500ms ease-in-out;
+    transition: transform 1s ease-in-out;
     transform-origin: top right;
 }
 
@@ -61,7 +72,7 @@
     background-color: blue;
     height: 100px;
     width: 100px;
-    transition: transform 500ms ease-in-out;
+    transition: transform 1s ease-in-out;
     transform-origin: bottom left;
 }
 
@@ -69,7 +80,7 @@
     background-color: green;
     height: 100px;
     width: 100px;
-    transition: transform 500ms ease-in-out;
+    transition: transform 1s ease-in-out;
     transform-origin: bottom right;
 }
 
@@ -103,6 +114,12 @@
 
 
 
+
+
+
+
+
+
 /* JENGA */
 
 .jenga-container {
@@ -111,6 +128,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: height 3s ease-in-out;
+    
 }
 
 .jenga-1, .jenga-3, .jenga-5, .jenga-7, .jenga-9 {
@@ -118,7 +137,7 @@
     outline: 1px solid black;
     width: 150px;
     height: 65px;
-    transition: height 1s ease-in-out;
+    /* transition: height 1s ease-in-out; */
 }
 
 .jenga-2, .jenga-4, .jenga-6, .jenga-8, .jenga-10 {
@@ -126,9 +145,9 @@
     outline: 1px solid black;
     width: 150px;
     height: 65px;
-    transition: min-height 1s ease-in-out;
+    /* transition: height 1s ease-in-out; */
 }
 
-.jenga-1:hover {
-    height: 0px;
+.jenga-container:hover {
+    height: 65px;
 }
